Fix icon alignment in the file-tree

--- a/resources/less/geometry/file-tree.less
+++ b/resources/less/geometry/file-tree.less
@@ -33,6 +33,11 @@
         padding-left:5px;
         margin:5px 0px;
         overflow: hidden;
+
+        .item-icon, .toggle-icon {
+          display: inline-block;
+          width: 18px; // Size of clr-icon with the margin of the icon
+        }
     }
 
     .list-item {
